[FIX] web_editor: crop buttons out of the screen
Before this commit:
The crop buttons were attached to the bottom of the screen.

After this commit:
The crop buttons will be added to the sidebar in mass-mailing,
website making the buttons more accessible.

taskId-3258587

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -609,6 +609,8 @@ img.o_we_selected_image {
     @include o-position-absolute(0, 0, 0, 0);
     /* This value must be higher than dialog z-index in bootstrap */
     z-index: 1056;
+    height: 100%;
+    overflow: auto;
 
     .o_we_cropper_wrapper {
         position: absolute;
@@ -618,7 +620,6 @@ img.o_we_selected_image {
         margin-top: 0.5rem;
         display: flex;
         flex-wrap: wrap;
-        bottom: 1rem;
 
         input[type=radio] {
             display: none;
