--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -207,7 +207,7 @@
     @include o-input-number-no-arrows();
     @include o-position-absolute(var(--o-we-toolbar-height), 0, 0, auto);
     position: fixed;
-    z-index: $o-we-zindex;
+    z-index: $o-we-zindex + 16;
     display: flex;
     flex-flow: column nowrap;
     width: $o-we-sidebar-width;
